# my_server

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  main.cpp  test.cpp
src/client/: CMakeLists.txt  main.cpp
src/client/tcp-client/: CMakeLists.txt  client.cpp  client.h
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.h
src/server/server/: CMakeLists.txt  server.cpp  server.h
